--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder">Karina Atanasova&nbsp;</h1>
-          <h5 class="fst-italic tagline">Your expert in creative marketing.</h5>
+          <h5 class="fst-italic tagline"> Your sip of humor of the day!</h5>
+          <h5 class="fst-italic tagline">&nbsp;</h5>
         </div>
       </header>
 
