--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
-                </a>
+                220941@buas.nl
+              </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
