--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>Production Assistant, Nu Boqna Studios</h4>
+                  <h5>June 2020–July 20221</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
                     <li>Coordinated shootings in studio and on location</li>
                     <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>Done as a Intership program for Breda University of Applied Sciences</li>
                   </ul>
                 </div>
               </li>
@@ -103,8 +103,8 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/ah logo.jpg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Albert Hein</h4>
-                  <h5>2023-2024</h5>
+                  <h4>Supermarket (Refill) Employee, Albert Hein</h4>
+                  <h5>September 2023- December 2023</h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                 </div>
               </li>
@@ -128,9 +128,9 @@
                   <h5>2022 –&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Active member of the student environment&nbsp;&nbsp;&nbsp;</li>
+                    <li>Currently in the Radio department, previousy in the TV department&nbsp;&nbsp;</li>
+                    <li>Exchange with Kristiania University in Oslo, Norway</li>
                   </ul>
                 </div>
               </li>
