--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
               </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://www.facebook.com/profile.php?id=100007517675589" target="_blank">
                   <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
+                  Karri Atanasova
                 </a>
               </li>
               <li class="contact-item">
