--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://github.com/KarinaAtanasova" target="_blank">
                   <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
-                  GitHub Profile
+                  Karina Atanasova
                 </a>
               </li>
               <li class="contact-item">
