--- a/pag1.html
+++ b/pag1.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>My first page</title>
+<link href="css/karina_font.css" rel="stylesheet" type="text/css">
 </head>	
 
 <body>
