--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>My Portfolio</title>
+    <title>Karina Atanasova's CV</title>
   </head>
   <!-- End of the head -->
 
@@ -43,7 +43,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/Karina_200x200.jpg" alt="Portrait of Firstname Lastname" width="160">
+          <img class="w-100 rounded-circle my-3" src="images/karinaportrait.jpg" alt="Portrait of Firstname Lastname" width="160">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
@@ -82,16 +82,16 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/nuboqna copy.jpg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/nuboqnalogo.jpg" alt="Company logo" width="100">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Production Assistant, Nu Boqna Studios</h4>
                   <h5>June 2020–July 20221</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Done as a Intership program for Breda University of Applied Sciences</li>
+                    <li>Assistant producer position&nbsp;</li>
+                    <li>Kept track of in-studio and outdoor shooting schedule&nbsp;&nbsp;</li>
+                    <li>Done as a Intership program</li>
                   </ul>
                 </div>
               </li>
@@ -100,7 +100,7 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/albert heijn copy.jpg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/albertheijnlogo.jpg" alt="Company logo" width="60">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Supermarket (Refill) Employee, Albert Hein</h4>
@@ -138,7 +138,7 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/high school logo.jpg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/highschoollogo.jpg" alt="School logo" width="60">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>High School Diploma, Fifth Lenguage School "Yoan Exzarch" Varna&nbsp;</h4>
@@ -190,12 +190,7 @@
                   Karina Atanasova
                 </a>
               </li>
-              <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://www.tiktok.com/@bredauniversityas" target="_blank">
-                  <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
-                  TikTok @bredauniversityas
-                </a>
-              </li>
+              <li class="contact-item"> </li>
             </ul>
           </section>
 
