--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- End of the head -->
 
   <!-- Start of the body, which contains everything visible on the page -->
-  <body class="d-flex flex-column h-100 justify-content-between">
+  <body class="font-adjustment">
 
     <!--
       We use a Bootstrap container to align contents.
@@ -48,9 +48,9 @@
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
-        <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class="fw-bolder">Karina Atanasova&nbsp;</h1>
-          <h5 class="fst-italic tagline"> Your sip of humor for the day!</h5>
+        <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content bg">
+          <h1 class="coco">Karina Atanasova&nbsp;</h1>
+          <h5 class="coci"> Your sip of humor for the day!</h5>
           <h5 class="fst-italic tagline">&nbsp;</h5>
         </div>
       </header>
@@ -71,7 +71,7 @@
             <section> is yet another semantic element. The first one is for professional experience.
           -->
           <section class="my-3 biography-section">
-            <h2>Professional Experience</h2>
+            <h2><em>Professional Experience</em></h2>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
               "list-unstyled" is a class that hides the bullet points of a list.
@@ -115,7 +115,7 @@
           <!-- We're done with jobs, let's move on to schools -->
 
           <section class="my-3 biography-section">
-            <h2>Education</h2>
+            <h2><em>Education</em></h2>
             <ul class="biography-list list-unstyled">
 
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
@@ -164,7 +164,7 @@
 
           <!-- The first block will be contact details -->
           <section class="my-3 aside-section">
-            <h2>Contact</h2>
+            <h2><em>Contact</em></h2>
             <!--
               A list of all your contact details.
               There are more icons in the images/icons folder, have a look if you want to add your LinkedIn or TikTok profile.
@@ -197,39 +197,39 @@
           <!-- End of contact details, moving on to languages -->
 
           <section class="my-3 aside-section">
-            <h2>Languages</h2>
+            <h2><em>Languages</em></h2>
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
             <ul class="language-list list-unstyled">
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">Bulgarian&nbsp;</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <div class="language-level w-50 border border-dark border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-100"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Native</h6>
+                  <div class="language-progress position-absolute bg-dark h-100 w-100"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1 white">Native</h6>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">English</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <div class="language-level w-50 border border-dark border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-75"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Full proficiency</h6>
+                  <div class="language-progress position-absolute bg-dark h-100 w-75"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1 white">Full proficiency</h6>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">German&nbsp;</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <div class="language-level w-50 border border-dark border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
+                  <div class="language-progress position-absolute bg-dark h-100 w-50"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1 white">Advanced</h6>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">Spanish&nbsp;</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <div class="language-level w-50 border border-dark border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
+                  <div class="language-progress position-absolute bg-dark h-100 w-25"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1 white">Beginner</h6>
                 </div>
               </li>
             </ul>
@@ -238,7 +238,7 @@
           <!-- End of contact details, moving on to other skills -->
 
           <section class="my-3 aside-section">
-            <h2>Other Skills</h2>
+            <h2><em>Other Skills</em></h2>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">&nbsp;Excellent organization skills&nbsp;&nbsp;</li>
               <li class="skill-item">Great team player&nbsp; &nbsp;&nbsp;</li>
@@ -249,7 +249,7 @@
           <!-- End of other skills, moving on to interest and hobbies -->
 
           <section class="my-3 aside-section">
-            <h2>Interests &amp; Hobbies</h2>
+            <h2><em>Interests &amp; Hobbies</em></h2>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Fotography&nbsp; &nbsp;&nbsp;</li>
               <li class="skill-item">Movie lover&nbsp;</li>
